# SEA-ME-warm-up

Modules/module_0/: book.h  convert  convert.cpp  phone  phone.cpp
Modules/module_04/RacingCAR/: CMakeLists.txt  car.cpp  car.h  control.h  final.qrc  game_start.cpp  game_start.h  game_start.ui  gamelogicthread.cpp  gamelogicthread.h  gamewidget.cpp  gamewidget.h  mainwindow.cpp  mainwindow.ui  obstacle.cpp  obstacle.h  sports.qrc  sports_car.qrc  start.cpp  start.h  startscreen.ui  test.qrc
Modules/module_1/exercise0/: CMakeLists.txt
Modules/module_1/exercise0/include/: car.h
Modules/module_1/exercise0/src/: car.cpp  main.cpp
Modules/module_1/exercise1/: CMakeLists.txt
Modules/module_1/exercise1/include/: Car.h  Sports.h
Modules/module_1/exercise1/src/: Car.cpp  Sports.cpp  main.cpp
Modules/module_2/: CMakeLists.txt
Modules/module_2/include/: Brake.h  Car.h  Engine.h  Part.h  Transmission.h  Wheel.h
Modules/module_2/src/: Brake.cpp  Car.cpp  Engine.cpp  Transmission.cpp  Wheel.cpp  main.cpp
Modules/module_3/test7/: CMakeLists.txt  adddialog.cpp  adddialog.h  adddialog.ui  contact.cpp  contact.h  contactlist.cpp  contactlist.h  finding.cpp  finding.h  finding.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
